--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 </li>
                 <li class="songItem" id="song-4">
                     <span>4</span>
-                    <img src="hot_girl_bummer_blackbear.jpg" alt="Blackbear">
+                    <img src="snow_on_the_beach_taylor.jpg" alt="Taylor Swift">
                     <h5>
-                        Hot girl bummer
-                        <div class="subtitle">Blackbear</div>
+                        Snow On The Beach
+                        <div class="subtitle">Taylor Swift & Lana Del Rey</div>
                     </h5>
                     <i class="bi playListPlay bi-play-circle-fill" id="4"></i>  
                 </li>
@@ -85,10 +85,10 @@
                 </li>
                 <li class="songItem" id="song-8">
                     <span>8</span>
-                    <img src="23_mike_will_made-it.jpg" alt="Mike WiLL Made-It">
+                    <img src="summertime_sadness_lana_del_rey.jpg" alt="Lana Del Rey">
                     <h5>
-                        23
-                        <div class="subtitle">Mike WiLL Made-It</div>
+                        Summertime Sadness
+                        <div class="subtitle">Lana Del Rey</div>
                     </h5>
                     <i class="bi playListPlay bi-play-circle-fill" id="8"></i>  
                 </li>
