--- a/index.html
+++ b/index.html
@@ -171,10 +171,17 @@
                 <div class="subtitle">The Neighbourhood</div>
             </h5>
             <div class="icon">
-                <i class="bi bi-skip-start-fill"></i>
-                <i class="bi bi-play-fill"></i>
-                <i class="bi bi-skip-end-fill"></i>
+                <i class="bi bi-skip-start"></i>
+                <i class="bi bi-play-circle"></i>
+                <i class="bi bi-skip-end"></i>
             </div>
+            <span id="currentStart">0:00</span>
+            <div class="bar">
+                <!-- <input type="range" id="seek" min="0" value="0" max="100"> -->
+                <div class="bar2" id="bar2"></div>
+                <div class="dot"></div>
+            </div>
+            <span id="currentEnd">0:00</span>
         </div>
     </main>
 
