new media folders

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul class="menu_song">
                 <li class="songItem" id="song-1">
                     <span>1</span>
-                    <img src="money_trees_kendrick.jpg" alt="Kendrick Lamer">
+                    <img src="images/money_trees_kendrick.jpg" alt="Kendrick Lamer">
                     <h5>
                         Money Trees
                         <div class="subtitle">Kendrick Lamar & Jay Rock</div>  
@@ -31,7 +31,7 @@
                 </li>
                 <li class="songItem" id="song-2">
                     <span>2</span>
-                    <img src="sweater_weather_the_neighbourhood.jpg" alt="The Neighbourhood">
+                    <img src="images/sweater_weather_the_neighbourhood.jpg" alt="The Neighbourhood">
                     <h5>
                         Sweater Weather
                         <div class="subtitle">The Neighbourhood</div>
