--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </li>
                 <li class="songItem" id="song-3">
                     <span>3</span>
-                    <img src="cooler_than_me_mike_posner.jpg" alt="Mike Posner">
+                    <img src="images/cooler_than_me_mike_posner.jpg" alt="Mike Posner">
                     <h5>
                         Cooler Than Me
                         <div class="subtitle">Mike Posner</div>
@@ -49,7 +49,7 @@
                 </li>
                 <li class="songItem" id="song-4">
                     <span>4</span>
-                    <img src="snow_on_the_beach_taylor.jpg" alt="Taylor Swift">
+                    <img src="images/snow_on_the_beach_taylor.jpg" alt="Taylor Swift">
                     <h5>
                         Snow On The Beach
                         <div class="subtitle">Taylor Swift & Lana Del Rey</div>
@@ -58,16 +58,16 @@
                 </li>
                 <li class="songItem" id="song-5">
                     <span>5</span>
-                    <img src="arabella_arcticmonkeys.jpg" alt="Arctic Monkeys">
+                    <img src="images/electric_feel_mgmt.jpg" alt="MGMT picture">
                     <h5>
-                        Arabella
-                        <div class="subtitle">Arctic Monkeys</div>
+                        Electric Feel
+                        <div class="subtitle">MGMT</div>
                     </h5>
                     <i class="bi playListPlay bi-play-circle-fill" id="5"></i>  
                 </li>
                 <li class="songItem" id="song-6">
                     <span>6</span>
-                    <img src="sex-drugs-etc-beachweather.jpg" alt="Beach Weather">
+                    <img src="images/sex-drugs-etc-beachweather.jpg" alt="Beach Weather">
                     <h5>
                         Sex, Drugs, Etc.
                         <div class="subtitle">Beach Weather</div>
@@ -76,16 +76,16 @@
                 </li> 
                 <li class="songItem" id="song-7">
                     <span>7</span>
-                    <img src="teenage_dream_stephan_dawes.jpg" alt="Stephen Dawes">
+                    <img src="images/arctic_monkeys_505.jpg" alt="Arctic Monkeys">
                     <h5>
-                        Teenage Dream
-                        <div class="subtitle">Stephen Dawes</div>
+                        505
+                        <div class="subtitle">Arctic Monkeys</div>
                     </h5>
                     <i class="bi playListPlay bi-play-circle-fill" id="7"></i>  
                 </li>
                 <li class="songItem" id="song-8">
                     <span>8</span>
-                    <img src="summertime_sadness_lana_del_rey.jpg" alt="Lana Del Rey">
+                    <img src="images/summertime_sadness_lana_del_rey.jpg" alt="Lana Del Rey">
                     <h5>
                         Summertime Sadness
                         <div class="subtitle">Lana Del Rey</div>
@@ -94,25 +94,25 @@
                 </li>
                 <li class="songItem" id="song-9">
                     <span>9</span>
-                    <img src="yes_to_heaven_lana_del_rey.jpg" alt="Lana Del Rey">
+                    <img src="images/national_athem_lana_del_rey.jpg" alt="Lana Del Rey">
                     <h5>
-                        Yes to Heaven
+                        National Athem
                         <div class="subtitle">Lana Del Rey</div>
                     </h5>
                     <i class="bi playListPlay bi-play-circle-fill" id="9"></i>  
                 </li>
                 <li class="songItem" id="song-10">
                     <span>10</span>
-                    <img src="romantic_homocide_d4vd.jpg" alt="d4vd">
+                    <img src="images/romantic_homicide_d4vd.jpg" alt="d4vd">
                     <h5>
-                        Romantic Homocide
+                        Romantic Homicide
                         <div class="subtitle">d4vd</div>
                     </h5>
                     <i class="bi playListPlay bi-play-circle-fill" id="10"></i>  
                 </li>
                 <li class="songItem" id="song-11">
                     <span>11</span>
-                    <img src="hope_xxxtentacion.jpg" alt="XXXTENTACION">
+                    <img src="images/hope_xxxtentacion.jpg" alt="XXXTENTACION">
                     <h5>
                         Hope
                         <div class="subtitle">XXXTENTACION</div>
@@ -121,16 +121,16 @@
                 </li>
                 <li class="songItem" id="song-12">
                     <span>12</span>
-                    <img src="mr.fprgettable_david_kushner.jpg" alt="David Kushner">
+                    <img src="images/smells_like_teen_spirit_nirvana.jpg" alt="Nirvana">
                     <h5>
-                        Mr. Forgettable
-                        <div class="subtitle">David Kushner</div>
+                        Smells Like Teen Spirit
+                        <div class="subtitle">Nirvana</div>
                     </h5>
                     <i class="bi playListPlay bi-play-circle-fill" id="12"></i>  
                 </li>
                 <li class="songItem" id="song-13">
                     <span>13</span>
-                    <img src="white_walls_macklemore.jpg" alt="Macklemore & Ryan Lewis">
+                    <img src="images/white_walls_macklemore.jpg" alt="Macklemore & Ryan Lewis">
                     <h5>
                         White Walls
                         <div class="subtitle">Macklemore & Ryan Lewis</div>
@@ -139,7 +139,7 @@
                 </li>
                 <li class="songItem" id="song-14">
                     <span>14</span>
-                    <img src="blue_da_ba_dee.jpg" alt="Eiffel 65 & Gabry Ponte">
+                    <img src="images/blue_da_ba_dee.jpg" alt="Eiffel 65 & Gabry Ponte">
                     <h5>
                         Blue (Da Ba Dee)
                         <div class="subtitle">Eiffel 65 & Gabry Ponte</div>
@@ -148,7 +148,7 @@
                 </li>
                 <li class="songItem" id="song-15">
                     <span>15</span>
-                    <img src="stressed_out_twenty_one_pilots.jpg" alt="Twenty One Pilots">
+                    <img src="images/stressed_out_twenty_one_pilots.jpg" alt="Twenty One Pilots">
                     <h5>
                         Stressed Out
                         <div class="subtitle">Twenty One Pilots</div>
@@ -158,7 +158,10 @@
             </ul>
         </div>
 
-        <div class="song_side"></div>
+        <div class="song_side">
+            <img class="song_side__image" id="mainImage" src="" alt="">
+            <audio src="" id="mainAudio"></audio>
+        </div>
 
         <div class="master_play">
             <div class="wave">
@@ -166,9 +169,9 @@
                 <div class="wave1"></div>
                 <div class="wave1"></div>
             </div>
-            <img src="sweater_weather_the_neighbourhood.jpg" alt="The Neighbourhood">
-            <h5>Sweater Weather<br>
-                <div class="subtitle">The Neighbourhood</div>
+            <img src="" alt="" id="controlsImage">
+            <h5><span id="controlsSong"></span><br>
+                <div class="subtitle" id="controlsArtists"></div>
             </h5>
             <div class="icon">
                 <i class="bi bi-skip-start"></i>
