--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
                 <div class="subtitle" id="controlsArtists"></div>
             </h5>
             <div class="icon">
-                <i class="bi bi-skip-start"></i>
-                <i class="bi bi-play-circle"></i>
-                <i class="bi bi-skip-end"></i>
+                <i class="bi bi-skip-start" id="skipStart"></i>
+                <i class="bi bi-play-circle" id="playCircle"></i>
+                <i class="bi bi-skip-end" id="skipEnd"></i>
             </div>
-            <span id="currentStart">0:00</span>
+            <span id="currentPlayTime">0:00</span>
             <div class="bar">
                 <!-- <input type="range" id="seek" min="0" value="0" max="100"> -->
                 <div class="bar2" id="bar2"></div>
