color of controls, style of scrollbar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     <link rel="stylesheet" href="ystyle.css">
 </head>
 
+
+<style>
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+
+
+    ::-webkit-scrollbar-track {
+        border-radius: 5px;
+        box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
+    }
+
+    ::-webkit-scrollbar-thumb {
+        border-radius: 5px;
+        background-color: rgb(63, 63, 63);
+    }
+</style>
+
+
 <body>
     <main>
         <div class="menu_side">
