--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 </head>
 
 
-<style>
+<!-- <style>
     ::-webkit-scrollbar {
-        width: 10px;
+        width: 4px;
     }
 
 
     ::-webkit-scrollbar-track {
         border-radius: 5px;
-        box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
+        box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.25);
     }
 
     ::-webkit-scrollbar-thumb {
         border-radius: 5px;
         background-color: rgb(63, 63, 63);
     }
-</style>
+</style> -->
 
 
 <body>
