--- a/index.html
+++ b/index.html
@@ -9,25 +9,6 @@
     <link rel="stylesheet" href="ystyle.css">
 </head>
 
-
-<!-- <style>
-    ::-webkit-scrollbar {
-        width: 4px;
-    }
-
-
-    ::-webkit-scrollbar-track {
-        border-radius: 5px;
-        box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.25);
-    }
-
-    ::-webkit-scrollbar-thumb {
-        border-radius: 5px;
-        background-color: rgb(63, 63, 63);
-    }
-</style> -->
-
-
 <body>
     <main>
         <div class="menu_side">
@@ -38,143 +19,7 @@
                 <h4 ><span></span><i class="bi bi-music-note-beamed"></i> Recommended</h4>
             </div>
 
-            <ul class="menu_song">
-                <li class="songItem" id="song-1">
-                    <span>1</span>
-                    <img src="images/money_trees_kendrick.jpg" alt="Kendrick Lamer">
-                    <h5>
-                        Money Trees
-                        <div class="subtitle">Kendrick Lamar & Jay Rock</div>  
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="1"></i>
-                </li>
-                <li class="songItem" id="song-2">
-                    <span>2</span>
-                    <img src="images/sweater_weather_the_neighbourhood.jpg" alt="The Neighbourhood">
-                    <h5>
-                        Sweater Weather
-                        <div class="subtitle">The Neighbourhood</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="2"></i>  
-                </li>
-                <li class="songItem" id="song-3">
-                    <span>3</span>
-                    <img src="images/cooler_than_me_mike_posner.jpg" alt="Mike Posner">
-                    <h5>
-                        Cooler Than Me
-                        <div class="subtitle">Mike Posner</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="3"></i>  
-                </li>
-                <li class="songItem" id="song-4">
-                    <span>4</span>
-                    <img src="images/snow_on_the_beach_taylor.jpg" alt="Taylor Swift">
-                    <h5>
-                        Snow On The Beach
-                        <div class="subtitle">Taylor Swift & Lana Del Rey</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="4"></i>  
-                </li>
-                <li class="songItem" id="song-5">
-                    <span>5</span>
-                    <img src="images/electric_feel_mgmt.jpg" alt="MGMT picture">
-                    <h5>
-                        Electric Feel
-                        <div class="subtitle">MGMT</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="5"></i>  
-                </li>
-                <li class="songItem" id="song-6">
-                    <span>6</span>
-                    <img src="images/sex-drugs-etc-beachweather.jpg" alt="Beach Weather">
-                    <h5>
-                        Sex, Drugs, Etc.
-                        <div class="subtitle">Beach Weather</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="6"></i>  
-                </li> 
-                <li class="songItem" id="song-7">
-                    <span>7</span>
-                    <img src="images/arctic_monkeys_505.jpg" alt="Arctic Monkeys">
-                    <h5>
-                        505
-                        <div class="subtitle">Arctic Monkeys</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="7"></i>  
-                </li>
-                <li class="songItem" id="song-8">
-                    <span>8</span>
-                    <img src="images/summertime_sadness_lana_del_rey.jpg" alt="Lana Del Rey">
-                    <h5>
-                        Summertime Sadness
-                        <div class="subtitle">Lana Del Rey</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="8"></i>  
-                </li>
-                <li class="songItem" id="song-9">
-                    <span>9</span>
-                    <img src="images/national_athem_lana_del_rey.jpg" alt="Lana Del Rey">
-                    <h5>
-                        National Athem
-                        <div class="subtitle">Lana Del Rey</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="9"></i>  
-                </li>
-                <li class="songItem" id="song-10">
-                    <span>10</span>
-                    <img src="images/romantic_homicide_d4vd.jpg" alt="d4vd">
-                    <h5>
-                        Romantic Homicide
-                        <div class="subtitle">d4vd</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="10"></i>  
-                </li>
-                <li class="songItem" id="song-11">
-                    <span>11</span>
-                    <img src="images/hope_xxxtentacion.jpg" alt="XXXTENTACION">
-                    <h5>
-                        Hope
-                        <div class="subtitle">XXXTENTACION</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="11"></i>  
-                </li>
-                <li class="songItem" id="song-12">
-                    <span>12</span>
-                    <img src="images/smells_like_teen_spirit_nirvana.jpg" alt="Nirvana">
-                    <h5>
-                        Smells Like Teen Spirit
-                        <div class="subtitle">Nirvana</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="12"></i>  
-                </li>
-                <li class="songItem" id="song-13">
-                    <span>13</span>
-                    <img src="images/white_walls_macklemore.jpg" alt="Macklemore & Ryan Lewis">
-                    <h5>
-                        White Walls
-                        <div class="subtitle">Macklemore & Ryan Lewis</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="13"></i>  
-                </li>
-                <li class="songItem" id="song-14">
-                    <span>14</span>
-                    <img src="images/blue_da_ba_dee.jpg" alt="Eiffel 65 & Gabry Ponte">
-                    <h5>
-                        Blue (Da Ba Dee)
-                        <div class="subtitle">Eiffel 65 & Gabry Ponte</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="14"></i>  
-                </li>
-                <li class="songItem" id="song-15">
-                    <span>15</span>
-                    <img src="images/stressed_out_twenty_one_pilots.jpg" alt="Twenty One Pilots">
-                    <h5>
-                        Stressed Out
-                        <div class="subtitle">Twenty One Pilots</div>
-                    </h5>
-                    <i class="bi playListPlay bi-play-circle-fill" id="15"></i>  
-                </li>
-            </ul>
+            <ul class="menu_song" id="listElement"></ul>
         </div>
 
         <div class="song_side">
