--- a/index.html
+++ b/index.html
@@ -37,11 +37,27 @@
             <h5><span id="controlsSong"></span><br>
                 <div class="subtitle" id="controlsArtists"></div>
             </h5>
-            <div class="icon">
-                <i class="bi bi-skip-start" id="skipStart"></i>
-                <i class="bi bi-play-circle" id="playCircle"></i>
-                <i class="bi bi-skip-end" id="skipEnd"></i>
+
+            <div class="material-symbols-outlined" id="shuffle">
+                <img src="icons/shuffle.svg" alt="shuffle">
             </div>
+            <div class="material-symbols-outlined" id="loop">
+                <img src="icons/restart-alt.svg" alt="restart alt">
+            </div>
+            <div class="material-symbols-outlined" id="skipStart">
+                <img src="icons/skip-prev.svg" alt="skip prev">
+            </div>
+            <div class="material-symbols-outlined" id="playCircle">
+                <img src="icons/play.svg" alt="play" id="playPauseIcon">
+            </div>
+            <div class="material-symbols-outlined" id="skipEnd">
+                <img src="icons/skip-next.svg" alt="skip next">
+            </div>
+            <div class="material-symbols-outlined" id="repeat">
+                <img src="icons/repeat.svg" alt="repeat">
+            </div>
+
+            
             <span id="currentPlayTime">0:00</span>
             <div class="bar">
                 <!-- <input type="range" id="seek" min="0" value="0" max="100"> -->
