green active class

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             </h5>
 
             <div class="material-symbols-outlined" id="shuffle">
-                <img src="icons/shuffle.svg" alt="shuffle">
+                <svg class="" xmlns="http://www.w3.org/2000/svg" height="35" width="35" fill="#fff"><path d="M29.05 40.5v-3h6.25l-9.2-9.15 2.1-2.15 9.3 9.2v-6.35h3V40.5Zm-19.45 0-2.1-2.15 27.9-27.9h-6.35v-3H40.5V18.9h-3v-6.3Zm10.15-18.7L7.5 9.6l2.15-2.15 12.25 12.2Z"/></svg>
             </div>
             <div class="material-symbols-outlined" id="loop">
-                <img src="icons/restart-alt.svg" alt="restart alt">
+                <svg class="" xmlns="http://www.w3.org/2000/svg" height="35" width="35" fill="#fff"><path d="M22.55 41.9q-6.15-.5-10.35-5.05Q8 32.3 8 26.05q0-3.85 1.775-7.25t4.975-5.55l2.15 2.15q-2.8 1.65-4.35 4.525Q11 22.8 11 26.05q0 5 3.3 8.65 3.3 3.65 8.25 4.2Zm3 0v-3q5-.6 8.25-4.225 3.25-3.625 3.25-8.625 0-5.45-3.775-9.225Q29.5 13.05 24.05 13.05h-1l3 3-2.15 2.15-6.65-6.65L23.9 4.9l2.15 2.15-3 3h1q6.7 0 11.35 4.675 4.65 4.675 4.65 11.325 0 6.25-4.175 10.8Q31.7 41.4 25.55 41.9Z"/></svg>
             </div>
             <div class="material-symbols-outlined" id="skipStart">
                 <img src="icons/skip-prev.svg" alt="skip prev">
@@ -54,7 +54,7 @@
                 <img src="icons/skip-next.svg" alt="skip next">
             </div>
             <div class="material-symbols-outlined" id="repeat">
-                <img src="icons/repeat.svg" alt="repeat">
+                <svg class="" xmlns="http://www.w3.org/2000/svg" height="35" width="35" fill="#fff"><path d="m14 44-8-8 8-8 2.1 2.2-4.3 4.3H35v-8h3v11H11.8l4.3 4.3Zm-4-22.5v-11h26.2l-4.3-4.3L34 4l8 8-8 8-2.1-2.2 4.3-4.3H13v8Z"/></svg>
             </div>
 
             
